// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitChunks > should apply antd/semi/... splitChunks rule when pkg is installed 1`] = `
{
  "cacheGroups": {
    "lib-axios": {
      "name": "lib-axios",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]axios\\(-\\.\\+\\)\\?\\[\\\\\\\\/\\]/,
    },
    "lib-lodash": {
      "name": "lib-lodash",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]lodash\\(-es\\)\\?\\[\\\\\\\\/\\]/,
    },
    "react": {
      "name": "lib-react",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]\\(\\?:react\\|react-dom\\|scheduler\\|react-refresh\\|@rspack\\[\\\\\\\\/\\]plugin-react-refresh\\)\\[\\\\\\\\/\\]/,
    },
    "router": {
      "name": "lib-router",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]\\(\\?:react-router\\|react-router-dom\\|history\\|@remix-run\\[\\\\\\\\/\\]router\\)\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "enforceSizeThreshold": 50000,
}
`;

exports[`splitChunks > should apply splitChunks.react/router plugin option when strategy is split-by-experience 1`] = `
{
  "cacheGroups": {
    "lib-axios": {
      "name": "lib-axios",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]axios\\(-\\.\\+\\)\\?\\[\\\\\\\\/\\]/,
    },
    "lib-lodash": {
      "name": "lib-lodash",
      "priority": 0,
      "test": /node_modules\\[\\\\\\\\/\\]lodash\\(-es\\)\\?\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "enforceSizeThreshold": 50000,
}
`;

exports[`splitChunks > should not apply splitChunks rule when strategy is not split-by-experience 1`] = `
{
  "cacheGroups": {
    "singleVendor": {
      "chunks": "all",
      "enforce": true,
      "name": "vendor",
      "priority": 0,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "enforceSizeThreshold": 50000,
}
`;
